# bg3-saver

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  build_output.txt  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  save_manager.rs
